0030850: Visualization, OpenGl_Text - text within trihedron persistence jitters when camera is far from origin

OpenGl_Text now discards (redundant) translation part from camera orientation matrix.
Text anchor point alignment to integer coordinates is now not performed for 3D-oriented text.